@@ -33,10 +33,11 @@ WriteMakefile(
         'Test::More' => 0,
     },
     PREREQ_PM => {
-        'JSON'            => 0,
-        'LWP::UserAgent'  => 6.19,
-        'Moo'             => 2.003000,
-        'Pithub'          => 0.01033,
+        'Hook::Output::Tiny'    => 0,
+        'JSON'                  => 0,
+        'LWP::UserAgent'        => 6.19,
+        'Moo'                   => 2.003000,
+        'Pithub'                => 0.01033,
     },
     dist  => { COMPRESS => 'gzip -9f', SUFFIX => 'gz', },
     clean => { FILES => 'Github-Backup-*' },
